--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ document.querySelector("#name").innerText = name
    <label class="label" for="name" name="name">ロット数</label><br>
    <input id="name" placeholder="0.1" type="number">
  </div>
- <div class="item no-label">
-   <input type="submit">
+ <div class="bottom">
+   <input type="button" name="ok" value="以上の内容で確定し、送信">
    <script>
     const after_msg = {
     'type': 'text',
